# istatd-hs

./: .ghci  .gitignore  README.md  istatd-hs.cabal  stack.yaml
app/: Main.hs
benchmarks/: Benchmarks.hs
src/: Istatd.hs
src/Istatd/: Chan.hs  ChanData.hs  ChanLike.hs  Client.hs  Complexity.hs  Istatd.hs  Simplicity.hs  SimplicityTree.hs  SimplicityTreeC.hs  Tick.hs  Time.hs  TypeSet.hs  Types.hs
src/Istatd/Chan/: Chan.hs  ChanLike.hs  ChanT.hs
src/Istatd/Class/: Time.hs
src/Istatd/Control/: Monad.hs
src/Istatd/Datum/: DifferenceCounter.hs  Percentile.hs  Types.hs
src/Istatd/Monad/: Types.hs
test/Istatd/: IstatdSpec.hs
