name:                istatd-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/istatd-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  ghc-options:         -O2
  exposed-modules:     Istatd.Istatd
                     , Istatd.Chan
                     , Istatd.Client
                     , Istatd.Tick
                     , Istatd.Types
                     , Istatd.Control.Monad
  build-depends:       base >= 4.7 && < 5
                     , auto-update
                     , bytestring
                     , double-conversion
                     , exceptions
                     , stm
                     , stm-chans
                     , unagi-chan
                     , mtl
                     , async
                     , text
                     , time
                     , network
                     , safe-exceptions
  default-language:    Haskell2010

executable istatd-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -Werror
  ghc-options:         -O2
  build-depends:       base
                     , istatd-hs
                     , time
  default-language:    Haskell2010

test-suite istatd-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , istatd-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/istatd-hs
