name:                istatd-hs
version:             0.1.0.0
synopsis:            Channel base istatd interface
description:         Please see README.md
homepage:            https://github.com/merc1031/istatd-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Leonidas Loucas
maintainer:          merc1031@gmail.com
copyright:           2016 Leonidas Loucas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  ghc-options:         -O2
  exposed-modules:     Istatd.Chan.Chan
                     , Istatd.Chan.ChanLike
                     , Istatd.Chan.ChanT
                     , Istatd.Class.Time
                     , Istatd.Client
                     , Istatd.Complexity
                     , Istatd.Control.Monad
                     , Istatd.Datum.DifferenceCounter
                     , Istatd.Datum.Percentile
                     , Istatd.Istatd
                     , Istatd.Monad.Types
                     , Istatd.Tick
                     , Istatd.Types

  build-depends:       base >= 4.7 && < 5

                     , async
                     , auto-update
                     , bytestring
                     , containers
                     , deepseq
                     , double-conversion
                     , exceptions
                     , ifcxt
                     , lifted-async
                     , monad-control
                     , mtl
                     , network
--                     , cluss
                     , safe-exceptions
                     , stm
                     , stm-chans
                     , text
                     , time
                     , transformers-base
                     , unagi-chan
                     , unordered-containers
  default-language:    Haskell2010

executable istatd-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -Werror
  ghc-options:         -O2
  build-depends:       base
                     , istatd-hs

                     , time
                     , random
  default-language:    Haskell2010

test-suite istatd-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , istatd-hs

                     , exceptions
                     , hspec
                     , hspec-discover
                     , monad-control
                     , mtl
                     , stm
                     , time
                     , transformers-base
                     , unagi-chan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark istatd-hs-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Benchmarks.hs
  build-depends:       base
                     , istatd-hs

                     , criterion
                     , deepseq
                     , exceptions
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -Werror
  ghc-options:         -with-rtsopts=-T
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/merc1031/istatd-hs
